updated cpanel etc

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 						============================================= -->
 						<div id="logo" class="col-lg-auto me-lg-auto">
 							<a href="index-2.html" class="w-auto">
-								<img class="logo-default" srcset="demos/saas-2/images/logo.png, demos/saas-2/images/logo@2x.png 2x" src="demos/saas-2/images/logo%402x.png" alt="Canvas Logo">
+								<img class="logo-default" srcset="demos/saas-2/images/logo.png, demos/saas-2/images/logo@2x.png 2x" src="demos/saas-2/images/logo%402x.png" alt="New Era Solutions">
 								<img class="logo-dark" srcset="demos/saas-2/images/logo-dark.png, demos/saas-2/images/logo-dark@2x.png 2x" src="demos/saas-2/images/logo-dark%402x.png" alt="Canvas Logo">
 							</a>
 						</div><!-- #logo end -->
