--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </script>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta http-equiv="x-ua-compatible" content="IE=edge">
-	<meta name="author" content="New Era Solutions">
+	<meta name="author" content="New Era Solutions test">
 	<meta name="description" content="new is now">
 
 	<!-- Font Imports -->
