changes to text, video modal

--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
         }
         #video-modal .modal-content {
             margin: auto;
+			top: 20%; /* Added top margin */
+
             display: block;
             width: 80%;
             max-width: 700px;
@@ -428,7 +430,7 @@
 								<h2 class="display-4 fw-bold text-dark">Discover New Era Solutions</h2>
 								<p class="small mt-1 font-italic text-dark" style="font-size: 1.1rem;">
 									<strong style="font-family: 'Times New Roman', serif; font-size: 1.5rem;">proc·ess el·e·va·tion</strong> (n) <br>
-									Agents doing your manual work = abundance.
+									Agents doing your manual work. Abundance.
 								</p>
 							</div>
 						</div>
